// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`useWhyDidYouUpdate > should show the changes 1`] = `
<div>
  false
</div>
`;

exports[`useWhyDidYouUpdate > should show the changes 2`] = `
<div>
  {
  "version": {
    "from": 1,
    "to": 2
  }
}
</div>
`;

exports[`useWhyDidYouUpdate > should show the changes 3`] = `
<div>
  false
</div>
`;
